# mkcpp

./: .gitignore  Makefile.am  README.md  configure.ac  mkcpp.spec
src/: mkc++.cpp
src/.deps/: mkc++.Po
