AUTOMAKE_OPTIONS = foreign subdir-objects
AM_CPPFLAGS = -pedantic -Wall -Wextra -Wcast-align -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-include-dirs -Wnoexcept -Woverloaded-virtual -Wredundant-decls -Wshadow -Wsign-conversion -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef -Werror

bin_PROGRAMS = mkcpp
mkcpp_SOURCES = src/mkc++.cpp

EXTRA_DIST = LICENSE README.md



